feat(package.json): update version number
feat(package-lock.json): update lockfileVersion and package version number

fix(package.json,package-lock.json): correct version inconsistency

feat(package.json): change display name for consistency with description

feat(package-lock.json): support new package version

feat(package.json,package-lock.json): update version numbers

fix(package.json): add missing "publisher"

feat(package.json): update publisher's name to match previous updates

feat(package.json): fix minor typo 'messsege' -> 'message'

feat(package.json): add or remove unnecessary keywords from commitlint config

feat(package.json): correct and extend the default scopes list for commit messages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ai-commit-messege",
-    "displayName": "ai-commit-messege",
+    "displayName": "Ai Commit Messege",
     "publisher": "Its-Satyajit",
     "description": "",
     "version": "0.0.1",
@@ -63,7 +63,15 @@
                         "style",
                         "refactor",
                         "perf",
-                        "test"
+                        "test",
+                        "feat",
+                        "fix",
+                        "revert",
+                        "security",
+                        "hotfix",
+                        "config",
+                        "optimization",
+                        "cleanup"
                     ],
                     "description": "A list of commit types that the extension will recognize and use to categorize commit messages. You can customize this list based on your project's needs."
                 },
@@ -74,7 +82,23 @@
                     },
                     "default": [
                         "parser",
-                        "ui"
+                        "ui",
+                        "api",
+                        "database",
+                        "auth",
+                        "config",
+                        "documentation",
+                        "tests",
+                        "build",
+                        "deployment",
+                        "styling",
+                        "performance",
+                        "security",
+                        "accessibility",
+                        "internationalization",
+                        "logging",
+                        "monitoring",
+                        "notifications"
                     ],
                     "description": "A list of commit scopes that the extension will recognize and include in commit messages. Customize this list to align with the scopes relevant to your project."
                 }
