feat(api): update package.json to reflect new dependencies and scopes

--- a/package.json
+++ b/package.json
@@ -56,22 +56,33 @@
                         "type": "string"
                     },
                     "default": [
-                        "build",
+                        "feat",
+                        "fix",
                         "chore",
-                        "ci",
                         "docs",
                         "style",
                         "refactor",
                         "perf",
                         "test",
-                        "feat",
-                        "fix",
-                        "revert",
+                        "ci",
+                        "build",
                         "security",
-                        "hotfix",
+                        "deps",
                         "config",
-                        "optimization",
-                        "cleanup"
+                        "init",
+                        "package",
+                        "lint",
+                        "merge",
+                        "hotfix",
+                        "accessibility",
+                        "database",
+                        "analytics",
+                        "logging",
+                        "ux",
+                        "error-handling",
+                        "documentation",
+                        "container",
+                        "ci/cd"
                     ],
                     "description": "A list of commit types that the extension will recognize and use to categorize commit messages. You can customize this list based on your project's needs."
                 },
@@ -81,24 +92,57 @@
                         "type": "string"
                     },
                     "default": [
-                        "parser",
-                        "ui",
                         "api",
-                        "database",
+                        "ui",
+                        "core",
                         "auth",
-                        "config",
-                        "documentation",
-                        "tests",
                         "build",
-                        "deployment",
-                        "styling",
-                        "performance",
+                        "config",
+                        "deps",
+                        "docs",
+                        "env",
+                        "i18n",
+                        "test",
+                        "db",
+                        "styles",
+                        "scripts",
+                        "mobile",
+                        "server",
+                        "client",
+                        "ci",
                         "security",
-                        "accessibility",
-                        "internationalization",
+                        "middleware",
+                        "model",
+                        "router",
+                        "cli",
+                        "notifications",
                         "logging",
+                        "validation",
+                        "serialization",
+                        "migration",
+                        "schema",
+                        "container",
+                        "cache",
+                        "queue",
+                        "service",
+                        "storage",
+                        "networking",
+                        "deployment",
                         "monitoring",
-                        "notifications"
+                        "metrics",
+                        "analytics",
+                        "template",
+                        "state-management",
+                        "module",
+                        "library",
+                        "feature-toggle",
+                        "backup",
+                        "integration",
+                        "cloud",
+                        "graphql",
+                        "rest",
+                        "json",
+                        "xml"
                     ],
                     "description": "A list of commit scopes that the extension will recognize and include in commit messages. Customize this list to align with the scopes relevant to your project."
                 }
@@ -156,6 +200,11 @@
         "typescript": "^5.5.4"
     },
     "dependencies": {
-        "axios": "^1.7.5"
+        "@types/chalk": "^2.2.0",
+        "@types/diff": "^5.2.2",
+        "axios": "^1.7.5",
+        "chalk": "^5.3.0",
+        "diff": "6.0.0-beta",
+        "simple-git": "^3.25.0"
     }
 }
