--- a/package.json
+++ b/package.json
@@ -183,7 +183,8 @@
         "test": "vscode-test",
         "publish:patch": "npx vsce publish patch",
         "publish:minor": "npx vsce publish minor",
-        "publish:major": "npx vsce publish major"
+        "publish:major": "npx vsce publish major",
+        "create:package": "vsce package"
     },
     "devDependencies": {
         "@types/mocha": "^10.0.7",
