feat: Add support for new commit types in package.json configuration

--- a/package.json
+++ b/package.json
@@ -56,33 +56,62 @@
                         "type": "string"
                     },
                     "default": [
-                        "feat",
-                        "fix",
-                        "chore",
-                        "docs",
-                        "style",
-                        "refactor",
-                        "perf",
-                        "test",
-                        "ci",
-                        "build",
-                        "security",
-                        "deps",
-                        "config",
-                        "init",
-                        "package",
-                        "lint",
-                        "merge",
-                        "hotfix",
-                        "accessibility",
-                        "database",
-                        "analytics",
-                        "logging",
-                        "ux",
-                        "error-handling",
-                        "documentation",
-                        "container",
-                        "ci/cd"
+                        "🚀 feat",
+                        "🐛 fix",
+                        "🧹 chore",
+                        "📝 docs",
+                        "🎨 style",
+                        "🔨 refactor",
+                        "⚡ perf",
+                        "✅ test",
+                        "👷 ci",
+                        "🏗 build",
+                        "🔒 security",
+                        "📦 deps",
+                        "⚙️ config",
+                        "🎉 init",
+                        "📦 package",
+                        "🚨 lint",
+                        "🔀 merge",
+                        "🔥 hotfix",
+                        "♿ accessibility",
+                        "🗄 database",
+                        "📊 analytics",
+                        "🪵 logging",
+                        "🎨 ux",
+                        "❗ error-handling",
+                        "📚 documentation",
+                        "📦 container",
+                        "🔄 ci/cd",
+                        "⏪ revert",
+                        "🌍 i18n",
+                        "🌐 l10n",
+                        "🧼 cleanup",
+                        "🖼 ui",
+                        "🛠 infra",
+                        "🧰 devtools",
+                        "🧪 coverage",
+                        "📈 monitoring",
+                        "⚠️ deprecate",
+                        "⬆️ deps-upgrade",
+                        "🔧 maintenance",
+                        "🔄 config-change",
+                        "🐳 docker",
+                        "🚦 ci-cd-improvement",
+                        "🛠 refinement",
+                        "🌐 translation",
+                        "👤 ux",
+                        "🐞 bug",
+                        "🚩 feature-flag",
+                        "⏱ perf-test",
+                        "🗑 deps-remove",
+                        "🖥 env",
+                        "🔙 regression",
+                        "💾 backup",
+                        "🔧 build-sys",
+                        "📜 license",
+                        "🔍 seo",
+                        "🔑 sec-fix"
                     ],
                     "description": "A list of commit types that the extension will recognize and use to categorize commit messages. You can customize this list based on your project's needs."
                 },
