feat(ollama): stream working ollama..

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -8,7 +8,7 @@ src/**
 esbuild.js
 vsc-extension-quickstart.md
 **/tsconfig.json
-**/.eslintrc.json
+**/eslint.config.mjs
 **/*.map
 **/*.ts
 **/.vscode-test.*
