chore: update renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -1,28 +1,31 @@
 {
     "extends": ["config:base"],
+    "baseBranches": ["dev"],
     "packageRules": [
-        {
-            "matchDepTypes": ["dependencies", "devDependencies"],
-            "matchUpdateTypes": ["major"],
-            "automerge": false
-        },
-        {
-            "matchDepTypes": ["dependencies"],
-            "matchUpdateTypes": ["minor", "patch"],
-            "automergeType": "pr",
-            "automerge": true
-        },
-        {
-            "matchDepTypes": ["devDependencies"],
-            "matchUpdateTypes": ["minor", "patch"],
-            "automergeType": "pr",
-            "automerge": true
-        }
+      {
+        "matchDepTypes": ["dependencies", "devDependencies"],
+        "matchUpdateTypes": ["major"],
+        "enabled": false
+      },
+      {
+        "matchDepTypes": ["dependencies"],
+        "automerge": true,
+        "matchUpdateTypes": ["minor", "patch"]
+      },
+      {
+        "matchDepTypes": ["devDependencies"],
+        "automerge": true,
+        "matchUpdateTypes": ["minor", "patch"]
+      }
     ],
     "dependencyDashboard": false,
-    "schedule": ["before 9am on Monday", "after 5pm on Friday", "every weekend"],
+    "schedule": [
+      "before 9am on Monday",
+      "after 5pm on Friday",
+      "every weekend"
+    ],
     "timezone": "Asia/Kolkata",
     "branchPrefix": "renovate/",
-    "rebaseWhen": "behind-base-branch",
     "labels": ["dependencies", "auto-update"]
-}
+  }
+  
