--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,14 +17,18 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
+
+      - name: Install pnpm
+        run: |
+          npm install -g pnpm
 
       - name: Install Dependencies
-        run: npm i
+        run: pnpm install
 
       - name: Package Extension
         run: |
-          npm install -g @vscode/vsce
+          pnpm add -g @vscode/vsce
           vsce package
 
       - name: Publish to Visual Studio Marketplace
