--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,21 +12,23 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      # 1. Install pnpm FIRST (standalone installation)
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+
+      # 2. Setup Node.js AFTER pnpm is installed
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: "pnpm"  
+          cache: "pnpm"  # Now works because pnpm is already in PATH
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4 
-        with:
-          version: latest
-
+      # 3. Proceed with dependencies and build
       - name: Install Dependencies
         run: pnpm install
 
-     
       - name: Package Extension
         run: |
           pnpm add -g @vscode/vsce
