--- a/package.json
+++ b/package.json
@@ -33,16 +33,19 @@
     "build": "webpack --mode development"
   },
   "devDependencies": {
+      "@eslint-community/eslint-utils": "^4.4.1",
+  "@eslint/config-array": "^0.19.1",
+  "@typescript-eslint/eslint-plugin": "^8.21.0",
+  "@typescript-eslint/parser": "^8.21.0",
+  "eslint": "^9.19.0",
+  "eslint-plugin-import": "^2.29.1",
     "@types/mocha": "^10.0.10",
     "@types/node": "~22.10.10",
     "@types/vscode": "^1.96.0",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@typescript-eslint/parser": "^8.17.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "@vscode/vsce": "^3.2.1",
     "esbuild": "^0.24.0",
-    "eslint": "^9.16.0",
     "npm-run-all2": "^5.0.0",
     "typescript": "^5.7.2",
     "webpack": "^5.97.1",
