--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,50 @@
 name: Build and Deploy Extension
-
 on:
   push:
     tags:
       - "v*.*.*"
-  workflow_dispatch:  # Allows manual triggering
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      # 1. Install pnpm FIRST (standalone installation)
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+
+      # 2. Setup Node.js AFTER pnpm is installed
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
+          cache: "pnpm" # Now works because pnpm is already in PATH
 
+      # 3. Proceed with dependencies and build
       - name: Install Dependencies
-        run: npm i
+        run: pnpm install
+      - name: Clean node_modules
+         run: |
+          pnpm install --production=false
+          pnpm prune --production
+ 
 
       - name: Package Extension
         run: |
-          npm install -g @vscode/vsce
-          vsce package
+          pnpm add -g @vscode/vsce
+          vsce package --no-dependencies
 
       - name: Publish to Visual Studio Marketplace
         env:
           VSCE_PAT: ${{ secrets.VS_MARKETPLACE_TOKEN }}
-        run: |
-          vsce publish --pat $VSCE_PAT
+        run: vsce publish --pat $VSCE_PAT
 
       - name: Publish to Open VSX Registry
         env:
           OVSX_PAT: ${{ secrets.OPEN_VSX_TOKEN }}
-        run: |
-          npx ovsx publish --pat $OVSX_PAT
+        run: npx ovsx publish --pat $OVSX_PAT
