--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,29 +4,36 @@ on:
     tags:
       - 'v*'  
   workflow_dispatch:
-
+ 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
         with:
           version: latest
-      - uses: actions/setup-node@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: "pnpm"
-      
+
       - name: Install Dependencies
+        run: pnpm install
+
+      - name: Clean node_modules 
         run: |
-          pnpm prune
           pnpm install
 
-      - name: Package Extension
+    - name: Package Extension
         run: |
           pnpm add -g @vscode/vsce
-          vsce package -o extension.vsix
+          vsce package --no-dependencies
 
       - name: Publish to Visual Studio Marketplace
         env:
