--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy Extension
 on:
   push:
     tags:
-      - "v*"
+      - 'v*'  
   workflow_dispatch:
 
 jobs:
@@ -34,7 +34,9 @@ jobs:
       - name: Publish to Visual Studio Marketplace
         env:
           VSCE_PAT: ${{ secrets.VS_MARKETPLACE_TOKEN }}
-        run: vsce publish --pat $VSCE_PAT --no-dependencies
+        run: |
+          vsce publish --pat $VSCE_PAT --no-dependencies \
+            -p $(jq -r .publisher package.json)
 
       - name: Publish to Open VSX Registry
         env:
