--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,12 +31,12 @@ jobs:
           pnpm add -g @vscode/vsce
           vsce package --no-dependencies
 
-      - name: Publish to Visual Studio Marketplace
-        env:
-          VSCE_PAT: ${{ secrets.VS_MARKETPLACE_TOKEN }}
-        run: |
-          vsce publish --pat $VSCE_PAT --no-dependencies \
-            -p $(jq -r .publisher package.json)
+      # - name: Publish to Visual Studio Marketplace
+      #   env:
+      #     VSCE_PAT: ${{ secrets.VS_MARKETPLACE_TOKEN }}
+      #   run: |
+      #     vsce publish --pat $VSCE_PAT --no-dependencies \
+      #       -p $(jq -r .publisher package.json)
 
       - name: Publish to Open VSX Registry
         env:
