--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           VSCE_PAT: ${{ secrets.VS_MARKETPLACE_TOKEN }}
         run: |
-          vsce publish --pat $VSCE_PAT
+          vsce publish minor --pat $VSCE_PAT
 
       - name: Publish to Open VSX Registry
         env:
