--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,11 +27,11 @@ jobs:
           npm install -g @vscode/vsce
           vsce package
 
-      - name: Publish to Visual Studio Marketplace
-        env:
-          VSCE_PAT: ${{ secrets.VS_MARKETPLACE_TOKEN }}
-        run: |
-          vsce publish minor --pat $VSCE_PAT
+      # - name: Publish to Visual Studio Marketplace
+      #   env:
+      #     VSCE_PAT: ${{ secrets.VS_MARKETPLACE_TOKEN }}
+      #   run: |
+      #     vsce publish minor --pat $VSCE_PAT
 
       - name: Publish to Open VSX Registry
         env:
